<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:title="Dashboard"
        android:id="@+id/navDashboard"
        android:icon="@drawable/ic_baseline_home_24"
        />
    <item
        android:title="Notifications"
        android:id="@+id/navNotifications"
        android:icon="@drawable/ic_baseline_notifications_24"
        />
    <item
        android:title="Profile"
        android:id="@+id/navProfile"
        android:icon="@drawable/ic_person"
        />
    <item android:title="@string/others">
    <menu>
        <item
            android:title="@string/settings"
            android:id="@+id/navSettings"
            android:icon="@drawable/ic_baseline_settings_24"
            />
        <item
            android:title="@string/about_us"
            android:id="@+id/navAbout"
            android:icon="@drawable/ic_baseline_info_24"
            />
    </menu>
        </item>



</menu>