<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bb"
    tools:context=".ProfileFragment">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:background="@color/design_default_color_primary"
        android:padding="8dp">

        <ImageView
            android:id="@+id/imageMenu"
            android:layout_width="30dp"
            android:layout_height="35dp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_menu_24" />

        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:padding="8dp"
            android:text="Create Chama"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:gravity="center"
        android:text="Create Chama"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="25sp"
        />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="145dp"
        android:gravity="left"
        android:layout_marginLeft="15dp"
        android:text="Details"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="15sp"
        />

    <EditText
        android:id="@+id/editChamaName"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_group_24"
        android:drawablePadding="10dp"
        android:hint="Chama Name"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginTop="180dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="#ECE5E5"
        android:textColorHint="@color/white" />



    <EditText
        android:id="@+id/editChamaDesc"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_description_24"
        android:drawablePadding="10dp"
        android:hint="Chama Description"
        android:minHeight="48dp"
        android:paddingLeft="20dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="250dp"
        android:layout_marginBottom="20dp"
        android:textColor="#ECE5E5"
        android:textColorHint="@color/white" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="325dp"
        android:gravity="left"
        android:layout_marginLeft="15dp"
        android:text="Settings"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="15sp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:hint="@string/contribution_period_in_days"
        android:textColorHint="@color/white"
        android:layout_marginTop="360dp"
        app:startIconDrawable="@drawable/ic_baseline_access_time_24"
        android:layout_marginLeft="10dp"
        app:startIconTint="@color/white"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_bg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/autoComplete_txtPeriod"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="@color/white"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="380dp"
        android:layout_height="50dp"
        android:hint="@string/system_flow_type"
        android:textColorHint="@color/white"
        android:layout_marginTop="500dp"
        app:startIconDrawable="@drawable/ic_baseline_app_settings_alt_24"
        android:layout_marginLeft="10dp"
        app:startIconTint="@color/white"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_bg"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu">
        <AutoCompleteTextView
            android:id="@+id/autoComplete_txtFlow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorLink="@color/white"
            android:inputType="none"/>
    </com.google.android.material.textfield.TextInputLayout>

    <EditText
        android:id="@+id/editContTarget"
        android:layout_width="380dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:background="@drawable/input_bg"
        android:drawableLeft="@drawable/ic_baseline_data_exploration_24"
        android:drawablePadding="15dp"
        android:hint="Contribution Target(in shillings)"
        android:minHeight="48dp"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="430dp"
        android:layout_marginBottom="20dp"
        android:textColor="#ECE5E5"
        android:textColorHint="@color/white" />


    <Button
        android:id="@+id/btnCreate"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:layout_marginTop="590dp"
        android:gravity="center"
        android:layout_marginLeft="100dp"
        android:text="Create" />



</FrameLayout>